add homer train2 param set
Signed-off-by: Kaustubh Ashtekar <ksashtekar@gmail.com>

--- a/hparams/default.yaml
+++ b/hparams/default.yaml
@@ -73,6 +73,32 @@ train2:
     test_per_epoch: 1
     num_gpu: 4
 ---
+train2_homer:
+    # path
+    data_path: '/data/private/vc/datasets/homer/*.wav'
+
+    # model
+    hidden_units: 256  # alias: E
+    num_banks: 8
+    num_highway_blocks: 8
+    norm_type: 'ins'  # a normalizer function. value: bn, ln, ins, or None
+    t: 1.0  # temperature
+    dropout_rate: 0.2
+
+    # train
+    batch_size: 32
+    lr: 0.0003
+    lr_cyclic_margin: 0.
+    lr_cyclic_steps: 5000
+    clip_value_max: 3.
+    clip_value_min: -3.
+    clip_norm: 10
+    num_epochs: 10000
+    steps_per_epoch: 100
+    save_per_epoch: 50
+    test_per_epoch: 1
+    num_gpu: 4
+---
 test1:
     # path
     data_path: '/data/private/vc/datasets/timit/TIMIT/TEST/*/*/*.wav'
