--- a/hparams/default.yaml
+++ b/hparams/default.yaml
@@ -89,7 +89,8 @@ test2:
 ---
 convert:
     # path
-    data_path: '/data/private/vc/datasets/cmu_us_bdl_arctic-0.95-release/cmu_us_bdl_arctic/wav/*.wav'
+    # data_path: '/data/private/vc/datasets/cmu_us_bdl_arctic-0.95-release/cmu_us_bdl_arctic/wav/*.wav'
+    data_path: '/home/kau/work/homer-dataset/test/*.wav'
 
     # convert
     one_full_wav: False
